--- a/apps/rental-application-client-web/pages/styles.css
+++ b/apps/rental-application-client-web/pages/styles.css
@@ -1,6 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@import url("~leaflet/dist/leaflet.css");
+
+.leaflet-container{
+  width: 100%;
+  height: 100vh;
+}
 html {
   -webkit-text-size-adjust: 100%;
   font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont,
